<resources>
    <string name="app_name">Planify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="task_name_hint">Enter task name</string>
    <string name="task_description_hint">Enter task description</string>
    <string name="task_day_hint">Enter day</string>
    <string name="task_month_hint">Enter month</string>
    <string name="share_with_email_hint">Enter email to share with</string>
    <string name="share_checkbox_text">Share task with entered email</string>
    <string name="submit_task_button_text">Submit Task</string>
</resources>